objects/CBCFLD__CBC_Flood_Determination__c.object
<CustomObject>
    <fields>
        <fullName>CBCFLD__Base_Flood_Elevation_Feet_Count__c</fullName>
        <label>Base Flood Elevation Feet Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Census_Tract_IdStr__c</fullName>
        <label>Census Tract Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Census_Tract_Id__c</fullName>
        <description>--Deprecated-- user Census_Tract_IdStr</description>
        <label>-D Census Tract Identifier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Census_Tract_Identifier__c</fullName>
        <description>--DEPRECATED-- use Census_Tract_IdStr</description>
        <label>-D Census Tract Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to new Collateral</description>
        <label>Collateral2</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>CBC Flood Determination</relationshipLabel>
        <relationshipName>CBC_Flood_Determination</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral_City__c</fullName>
        <label>Collateral City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral_Postal_Code__c</fullName>
        <label>Collateral Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral_State__c</fullName>
        <label>Collateral State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral_Street_Address__c</fullName>
        <label>Collateral Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
        <relationshipLabel>CBC Flood Determination</relationshipLabel>
        <relationshipName>Flood_Certs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBCFLD__County_FIPS_Code__c</fullName>
        <label>County FIPS Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Flood_Certification_Identifier__c</fullName>
        <label>Flood Certification Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Flood_Product_Certify_Date__c</fullName>
        <label>Flood Product Certify Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_City__c</fullName>
        <label>Fulfillment Party City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_Name__c</fullName>
        <label>Fulfillment Party Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_Phone__c</fullName>
        <label>Fulfillment Party Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_Postal_Code__c</fullName>
        <label>Fulfillment Party Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_State__c</fullName>
        <label>Fulfillment Party State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Fulfillment_Party_Street_Address__c</fullName>
        <label>Fulfillment Party Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Is_Manual_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Process Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Is_NFIP_Status_Type_Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NFIP Status Type Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Is_NFIP_Status_Type_Regular__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NFIP Status Type Regular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Is_Not_Special_Flood_Hazard_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Special Flood Hazard Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Is_Special_Flood_Hazard_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Special Flood Hazard Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Latitude_Number__c</fullName>
        <label>Latitude Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_Case_Identifier__c</fullName>
        <label>Lender Case Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_City__c</fullName>
        <label>Lender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_Name__c</fullName>
        <label>Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_Postal_Code__c</fullName>
        <label>Lender Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_State__c</fullName>
        <label>Lender State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Lender_Street_Address__c</fullName>
        <label>Lender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Life_Of_Loan_Indicator__c</fullName>
        <label>Life Of Loan Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Longitude_Number__c</fullName>
        <label>Longitude Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__MSA_Identifier__c</fullName>
        <label>MSA Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Manual_Process_Completed_Date__c</fullName>
        <label>Manual Process Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Community_Identifier__c</fullName>
        <label>NFIP Community Identifier</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Community_Name__c</fullName>
        <label>NFIP Community Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Community_Participation_Start_Date__c</fullName>
        <label>NFIP Community Participation Start Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Community_Participation_Status_Type__c</fullName>
        <label>NFIP Community Participation Status Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_County__c</fullName>
        <label>NFIP County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Flood_Zone_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED--</description>
        <label>-D NFIP Flood Zone Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Flood_Zone__c</fullName>
        <label>NFIP Flood Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Insurance_Available_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFIP Insurance Available Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Insurance_Not_Available_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFIP Insurance Not Available Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Letter_Of_Map_Date__c</fullName>
        <label>NFIP Letter Of Map Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Map_Identifier__c</fullName>
        <label>NFIP Map Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Map_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFIP Map Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Map_Panel_Date__c</fullName>
        <label>NFIP Map Panel Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Map_Panel_Identifier__c</fullName>
        <label>NFIP Map Panel Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_Map_Panel_Suffix_Identifier__c</fullName>
        <label>NFIP Map Panel Suffix Identifier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__NFIP_State_Code__c</fullName>
        <label>NFIP State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Protected_Area_Designation_Date__c</fullName>
        <label>Protected Area Designation Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Protected_Area_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Area Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Special_Flood_Hazard_Area_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special_Flood Hazard Area Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBCFLD__State_FIPS_Code__c</fullName>
        <label>State FIPS Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCFLD__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processing - Priority Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CBC Flood Determination</label>
    <listViews>
        <fullName>CBCFLD__All</fullName>
        <columns>NAME</columns>
        <columns>CBCFLD__NFIP_Flood_Zone__c</columns>
        <columns>CBCFLD__Base_Flood_Elevation_Feet_Count__c</columns>
        <columns>CBCFLD__Collateral__c</columns>
        <columns>CBCFLD__County_FIPS_Code__c</columns>
        <columns>CBCFLD__Flood_Certification_Identifier__c</columns>
        <columns>CBCFLD__Flood_Product_Certify_Date__c</columns>
        <columns>CBCFLD__NFIP_Community_Participation_Status_Type__c</columns>
        <columns>CBCFLD__NFIP_County__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CBC Flood Determination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CBC Flood Determination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>